--- a/style.css
+++ b/style.css
@@ -2,26 +2,47 @@ body {
   font-family: Arial, sans-serif;
   padding: 0;
   margin: 0;
-  width: 610px;
   height: min-content;
 }
 
-#book-collection {
-  text-align: center;
+
+a {
+  text-decoration: none;
+  color: #000;
 }
 
-h1 {
-  margin-bottom: 50px;
+
+nav {
+  position: relative;
 }
 
-#book-list {
-  width: 80%;
+
+nav small {
+  position: absolute;
+  right: 6%;
+}
+
+
+.top-nav {
   display: flex;
-  margin: 0 auto;
-  flex-wrap: wrap;
-  justify-content: center;
-  border: 1px solid;
+  gap: 5px;
+  border: 3px solid;
+  box-sizing: border-box;
+  padding: 1% 3%;
+  justify-content: flex-end;
 }
+
+
+.top-nav span:first-of-type a {
+  color: blue;
+}
+
+
+#new-book,
+#contact {
+  display: none;
+}
+
 
 .book {
   width: 30rem;
@@ -35,9 +56,11 @@ h1 {
   padding: 3px;
 }
 
+
 .book:nth-child(even) {
   background-color: lightgray;
 }
+
 
 #add-book-form {
   display: flex;
@@ -49,19 +72,23 @@ h1 {
   align-items: center;
 }
 
+
 #add-button {
   margin-left: 8rem;
   border: 1px solid;
 }
+
 
 #add-book-form label {
   margin-right: 10px;
   border: 1px solid;
 }
 
+
 h2 {
   font-size: smaller;
 }
+
 
 #remove-button {
   margin-left: 10rem;
@@ -69,13 +96,16 @@ h2 {
   border: 1px solid;
 }
 
+
 h3 {
   font-size: smaller;
 }
 
+
 h4 {
   margin-top: 4rem;
 }
+
 
 .line {
   height: 91px;
@@ -85,4 +115,146 @@ h4 {
   rotate: 90deg;
   left: 19rem;
   background-color: #464242;
+}
+
+
+footer {
+  position: fixed;
+  bottom: 3%;
+  left: 0;
+  width: 100vw;
+  padding: 2px;
+  border: 3px solid;
+}
+
+
+
+
+body {
+  font-family: Arial, sans-serif;
+  padding: 0;
+  margin: 0;
+  height: min-content;
+}
+
+
+a {
+  text-decoration: none;
+  color: #000;
+}
+
+
+nav {
+  position: relative;
+}
+
+
+nav small {
+  position: absolute;
+  right: 6%;
+}
+
+
+.top-nav {
+  display: flex;
+  gap: 5px;
+  border: 3px solid;
+  box-sizing: border-box;
+  padding: 1% 3%;
+  justify-content: flex-end;
+}
+
+
+.top-nav span:first-of-type a {
+  color: blue;
+}
+
+
+#new-book,
+#contact {
+  display: none;
+}
+
+
+.book {
+  width: 30rem;
+  height: 1rem;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  align-content: center;
+  padding: 3px;
+}
+
+
+.book:nth-child(even) {
+  background-color: lightgray;
+}
+
+
+#add-book-form {
+  display: flex;
+  margin-top: -5rem;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-content: center;
+  gap: 1rem;
+  align-items: center;
+}
+
+
+#add-button {
+  margin-left: 8rem;
+  border: 1px solid;
+}
+
+
+#add-book-form label {
+  margin-right: 10px;
+  border: 1px solid;
+}
+
+
+h2 {
+  font-size: smaller;
+}
+
+
+#remove-button {
+  margin-left: 10rem;
+  margin-right: -0.2rem;
+  border: 1px solid;
+}
+
+
+h3 {
+  font-size: smaller;
+}
+
+
+h4 {
+  margin-top: 4rem;
+}
+
+
+.line {
+  height: 91px;
+  position: relative;
+  width: 2px;
+  top: -7.5rem;
+  rotate: 90deg;
+  left: 19rem;
+  background-color: #464242;
+}
+
+
+footer {
+  position: fixed;
+  bottom: 3%;
+  left: 0;
+  width: 100vw;
+  padding: 2px;
+  border: 3px solid;
 }
